--- a/admin/index.html
+++ b/admin/index.html
@@ -44,7 +44,40 @@
         </section>
         <section class="block block--llm" id="blockLlm">
           <h3 class="block-title">LLM</h3>
-          <p class="block-placeholder">Блок будет реализован в Фазе 3.</p>
+          <div class="status-bar" id="llmStatusBar" data-status="not_configured">
+            <span class="status-text" id="llmStatusText">Not configured</span>
+            <button type="button" class="btn btn-secondary" id="llmRetry">Retry</button>
+          </div>
+          <div class="form">
+            <label class="field">
+              <span class="field-label">LLM type *</span>
+              <select id="llmType" class="field-input field-select" aria-required="true">
+                <option value="">— выберите провайдера —</option>
+              </select>
+            </label>
+            <label class="field">
+              <span class="field-label">API key *</span>
+              <input type="password" id="llmApiKey" class="field-input" placeholder="Ключ API" autocomplete="off">
+              <span class="field-hint">Для Ollama можно оставить пустым.</span>
+            </label>
+            <label class="field">
+              <span class="field-label">Base URL</span>
+              <input type="text" id="llmBaseUrl" class="field-input" placeholder="URL API провайдера">
+              <span class="field-hint" id="llmBaseUrlHint"></span>
+            </label>
+            <label class="field">
+              <span class="field-label">Model type *</span>
+              <select id="llmModel" class="field-input field-select" aria-required="true">
+                <option value="">— выберите модель —</option>
+              </select>
+              <span class="field-hint field-hint--tooltip" id="llmModelHint" title="Reasoning-модели (🧠) подходят для сложных рассуждений.">🧠 Reasoning-модели — для сложных рассуждений.</span>
+            </label>
+            <label class="field">
+              <span class="field-label">System prompt (optional)</span>
+              <textarea id="llmSystemPrompt" class="field-input field-textarea" rows="3" placeholder="Системный промпт для модели"></textarea>
+            </label>
+            <button type="button" class="btn btn-primary" id="llmSave">Сохранить</button>
+          </div>
         </section>
       </div>
     </main>
