feat(admin): Phase 5.1 — acceptance criteria PRD §7 (placeholder + checklist)

--- a/admin/index.html
+++ b/admin/index.html
@@ -76,7 +76,7 @@
             </label>
             <label class="field">
               <span class="field-label">System prompt (optional)</span>
-              <textarea id="llmSystemPrompt" class="field-input field-textarea" rows="3" placeholder="Системный промпт для модели"></textarea>
+              <textarea id="llmSystemPrompt" class="field-input field-textarea" rows="3" placeholder="Введите системный промпт для настройки поведения модели..."></textarea>
             </label>
             <button type="button" class="btn btn-primary" id="llmSave">Сохранить</button>
           </div>
