Admin: active token UI, DELETE /token, PATCH llm, empty-token save, change detection
- Task 1+2: Active token section (masked), Delete button, confirmation modal, DELETE /api/settings/telegram/token, DELETE /api/settings/llm/token
- Task 3: Toast on invalid token save, hide active token section
- Task 4+7: lastTelegram/lastLlm snapshot, getLlmChangedFields(), PATCH /api/settings/llm for model/prompt only
- Task 5: Save with empty token when active token exists (backend uses existing creds)
- Task 6: System prompt via PATCH, no connection check
- settings_repository: mask_secret_active, activeTokenMasked, clear_telegram_token, clear_llm_token, update_llm_model_and_prompt
- Tests: delete token endpoints, PATCH llm, activeTokenMasked in GET
- README: new endpoints

--- a/admin/index.html
+++ b/admin/index.html
@@ -35,6 +35,11 @@
               <input type="password" id="telegramToken" class="field-input" placeholder="Токен бота">
               <span class="field-error" id="telegramFieldError" role="alert"></span>
             </label>
+            <div class="active-token" id="telegramActiveToken" hidden>
+              <span class="active-token-label">Активный токен</span>
+              <span class="active-token-value" id="telegramActiveTokenValue"></span>
+              <button type="button" class="btn btn-link btn-link--danger" id="telegramTokenDelete">Delete</button>
+            </div>
             <label class="field">
               <span class="field-label">Base URL</span>
               <input type="text" id="telegramBaseUrl" class="field-input" placeholder="https://api.telegram.org">
@@ -65,6 +70,11 @@
               <input type="password" id="llmApiKey" class="field-input" placeholder="Ключ API" autocomplete="off">
               <span class="field-hint">Для Ollama можно оставить пустым.</span>
             </label>
+            <div class="active-token" id="llmActiveToken" hidden>
+              <span class="active-token-label">Активный токен</span>
+              <span class="active-token-value" id="llmActiveTokenValue"></span>
+              <button type="button" class="btn btn-link btn-link--danger" id="llmTokenDelete">Delete</button>
+            </div>
             <label class="field">
               <span class="field-label">Base URL</span>
               <input type="text" id="llmBaseUrl" class="field-input" placeholder="URL API провайдера">
@@ -91,6 +101,16 @@
     </main>
   </div>
   <div id="toastContainer" class="toast-container" aria-live="polite"></div>
+  <div id="confirmModalOverlay" class="modal-overlay" hidden role="dialog" aria-modal="true" aria-labelledby="confirmModalTitle">
+    <div class="modal" id="confirmModal">
+      <h4 class="modal-title" id="confirmModalTitle">Отвязать токен?</h4>
+      <p class="modal-text" id="confirmModalText"></p>
+      <div class="modal-actions">
+        <button type="button" class="btn btn-secondary" id="confirmModalCancel">Отмена</button>
+        <button type="button" class="btn btn-outline" id="confirmModalConfirm">Удалить</button>
+      </div>
+    </div>
+  </div>
   <script src="/admin/app.js"></script>
 </body>
 </html>
