--- a/admin/index.html
+++ b/admin/index.html
@@ -85,8 +85,20 @@
               <select id="llmModel" class="field-input field-select" aria-required="true">
                 <option value="">— выберите модель —</option>
               </select>
+              <input type="text" id="llmModelCustom" class="field-input" placeholder="Например: gpt-4o" style="display: none;" aria-label="Модель (Custom)">
               <span class="field-hint field-hint--tooltip" id="llmModelHint" title="Reasoning-модели (🧠) подходят для сложных рассуждений.">🧠 Reasoning-модели — для сложных рассуждений.</span>
             </label>
+            <div id="llmAzureFields" class="llm-azure-fields" hidden>
+              <label class="field">
+                <span class="field-label">Azure Endpoint</span>
+                <input type="text" id="llmAzureEndpoint" class="field-input" placeholder="https://your-resource.openai.azure.com/">
+                <span class="field-hint">URL ресурса Azure OpenAI (без пути к API).</span>
+              </label>
+              <label class="field">
+                <span class="field-label">API Version</span>
+                <input type="text" id="llmAzureApiVersion" class="field-input" placeholder="2024-02-15-preview">
+              </label>
+            </div>
             <label class="field">
               <span class="field-label">System prompt (optional)</span>
               <textarea id="llmSystemPrompt" class="field-input field-textarea" rows="3" placeholder="Введите системный промпт для настройки поведения модели..."></textarea>
