--- a/admin/index.html
+++ b/admin/index.html
@@ -82,11 +82,14 @@
             </label>
             <label class="field">
               <span class="field-label">Model type *</span>
-              <select id="llmModel" class="field-input field-select" aria-required="true">
-                <option value="">— выберите модель —</option>
-              </select>
+              <div class="field-model-row">
+                <select id="llmModel" class="field-input field-select" aria-required="true">
+                  <option value="">— выберите модель —</option>
+                </select>
+              </div>
               <input type="text" id="llmModelCustom" class="field-input" placeholder="Например: gpt-4o" style="display: none;" aria-label="Модель (Custom)">
               <span class="field-hint field-hint--tooltip" id="llmModelHint" title="Reasoning-модели (🧠) подходят для сложных рассуждений.">🧠 Reasoning-модели — для сложных рассуждений.</span>
+              <span class="field-error" id="llmFetchModelsError" role="alert"></span>
             </label>
             <div id="llmAzureFields" class="llm-azure-fields" hidden>
               <label class="field">
