feat(service-admins): frontend tasks 13-20 — UI and integration
- Add HTML block in admin/index.html (left column, under Telegram block)
- Add CSS styles for service-admins-list, service-admin-row, loading states
- Implement loadServiceAdmins() — fetch from GET /api/service-admins
- Implement renderServiceAdminsList() and renderServiceAdminRow()
- Implement serviceAdminAdd() with validation (empty, number, positive, duplicate)
- Implement serviceAdminDelete() with confirmation dialog
- Integrate loadServiceAdmins() into loadSettings()
- Add event handlers for Add button and Enter key

--- a/admin/index.html
+++ b/admin/index.html
@@ -51,6 +51,22 @@
             </div>
           </div>
         </section>
+        <section class="block block--service-admins" id="blockServiceAdmins">
+          <h3 class="block-title">Админы сервиса</h3>
+          <div id="serviceAdminsList" class="service-admins-list">
+            <p class="block-placeholder" id="serviceAdminsPlaceholder">Нет добавленных администраторов</p>
+          </div>
+          <div class="form">
+            <label class="field">
+              <span class="field-label">Введите Telegram ID</span>
+              <input type="number" id="serviceAdminTelegramId" class="field-input" placeholder="365491351" min="1" step="1">
+              <span class="field-error" id="serviceAdminFieldError" role="alert"></span>
+            </label>
+            <div class="form-actions">
+              <button type="button" class="btn btn-primary" id="serviceAdminAdd">Добавить</button>
+            </div>
+          </div>
+        </section>
         <section class="block block--llm" id="blockLlm">
           <h3 class="block-title">LLM</h3>
           <div class="status-bar" id="llmStatusBar" data-status="not_configured">
