--- a/admin/index.html
+++ b/admin/index.html
@@ -59,7 +59,7 @@
           <div class="form">
             <label class="field">
               <span class="field-label">Введите Telegram ID</span>
-              <input type="number" id="serviceAdminTelegramId" class="field-input" placeholder="365491351" min="1" step="1">
+              <input type="text" id="serviceAdminTelegramId" class="field-input" placeholder="365491351" inputmode="numeric" pattern="[0-9]*" autocomplete="off">
               <span class="field-error" id="serviceAdminFieldError" role="alert"></span>
             </label>
             <div class="form-actions">
