fix(admin): remove placeholder from service admin Telegram ID input field

--- a/admin/index.html
+++ b/admin/index.html
@@ -120,7 +120,7 @@
           <div class="form">
             <label class="field">
               <span class="field-label">Введите Telegram ID</span>
-              <input type="text" id="serviceAdminTelegramId" class="field-input" placeholder="365491351" inputmode="numeric" pattern="[0-9]*" autocomplete="off">
+              <input type="text" id="serviceAdminTelegramId" class="field-input" inputmode="numeric" pattern="[0-9]*" autocomplete="off">
               <span class="field-error" id="serviceAdminFieldError" role="alert"></span>
             </label>
             <div class="form-actions">
