Add project_id field to LLM settings for filtering models by project
- Added project_id column to LLMSettingsModel database schema
- Updated SQLite migration to include project_id field
- Modified LLM settings repository to save/retrieve project_id
- Updated API endpoints (PUT/PATCH) to accept project_id parameter
- Enhanced model fetching functions to pass project_id to provider APIs
  (Google Cloud, Anthropic, OpenAI-compatible APIs)
- Added Project ID input field to admin UI
- Updated frontend JavaScript to handle project_id in save and fetch operations

--- a/admin/index.html
+++ b/admin/index.html
@@ -53,6 +53,11 @@
               <span class="field-hint" id="llmBaseUrlHint"></span>
             </label>
             <label class="field">
+              <span class="field-label">Project ID (optional)</span>
+              <input type="text" id="llmProjectId" class="field-input" placeholder="ID проекта для фильтрации моделей">
+              <span class="field-hint">Используется для получения списка моделей, доступных для конкретного проекта (например, Google Cloud).</span>
+            </label>
+            <label class="field">
               <span class="field-label">Model type *</span>
               <div class="field-model-row">
                 <select id="llmModel" class="field-input field-select" aria-required="true">
