--- a/admin/index.html
+++ b/admin/index.html
@@ -47,15 +47,15 @@
               <span class="active-token-value" id="llmActiveTokenValue"></span>
               <button type="button" class="btn btn-link btn-link--danger" id="llmTokenDelete">Delete</button>
             </div>
+            <label class="field" id="llmProjectIdField" hidden>
+              <span class="field-label">Project ID (optional)</span>
+              <input type="text" id="llmProjectId" class="field-input" placeholder="ID проекта для фильтрации моделей">
+              <span class="field-hint">Используется для получения списка моделей, доступных для конкретного проекта OpenAI.</span>
+            </label>
             <label class="field">
               <span class="field-label">Base URL</span>
               <input type="text" id="llmBaseUrl" class="field-input" placeholder="URL API провайдера">
               <span class="field-hint" id="llmBaseUrlHint"></span>
-            </label>
-            <label class="field">
-              <span class="field-label">Project ID (optional)</span>
-              <input type="text" id="llmProjectId" class="field-input" placeholder="ID проекта для фильтрации моделей">
-              <span class="field-hint">Используется для получения списка моделей, доступных для конкретного проекта (например, Google Cloud).</span>
             </label>
             <label class="field">
               <span class="field-label">Model type *</span>
