Fix: Show Project ID field only for OpenAI, add OpenAI-Project header support
- Updated toggleLlmProjectIdField() to show field only for OpenAI provider
- Added OpenAI-Project header support in fetch_models_from_api() for OpenAI API
- Updated api/app.py to pass project_id to fetch_models_from_api for OpenAI
- Updated field hint text to mention only OpenAI
- OpenAI API supports project filtering via OpenAI-Project header

--- a/admin/index.html
+++ b/admin/index.html
@@ -50,7 +50,7 @@
             <label class="field" id="llmProjectIdField" hidden>
               <span class="field-label">Project ID (optional)</span>
               <input type="text" id="llmProjectId" class="field-input" placeholder="ID проекта для фильтрации моделей">
-              <span class="field-hint">Используется для получения списка моделей, доступных для конкретного проекта (Google Cloud, Anthropic).</span>
+              <span class="field-hint">Используется для получения списка моделей, доступных для конкретного проекта OpenAI.</span>
             </label>
             <label class="field">
               <span class="field-label">Base URL</span>
